🔒 ADDITIONAL SECURITY: Move admin password to environment variable
- Replace hardcoded admin password hash with environment variable
- Add ADMIN_PASSWORD_HASH to .env.example with generation instructions
- Update docker-compose.yml to use environment variable for admin password
- Add admin password configuration to security documentation
- Provide bcrypt hash generation command for secure password setup

This completes the security hardening by removing all hardcoded credentials

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,10 @@ REDIS_PASSWORD=your_secure_redis_password
 JWT_SECRET=your_jwt_secret_key_here_minimum_32_characters
 ENCRYPTION_KEY=your_32_character_encryption_key_here
 
+# Admin User Configuration
+# Generate with: node -e "console.log(require('bcryptjs').hashSync('your_password', 10))"
+ADMIN_PASSWORD_HASH=your_bcrypt_hashed_admin_password
+
 # Grafana Configuration (if using monitoring)
 GRAFANA_ADMIN_PASSWORD=your_secure_grafana_password
 
