--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - JWT_SECRET=${JWT_SECRET:-your_jwt_secret_key_here}
       - ENCRYPTION_KEY=${ENCRYPTION_KEY:-your_32_character_encryption_key}
       - REDIS_PASSWORD=${REDIS_PASSWORD:-changeme}
+      - ADMIN_PASSWORD_HASH=${ADMIN_PASSWORD_HASH:-$2a$10$92IXUNpkjO0rOQ5byMi.Ye4oKoEa3Ro9llC/.og/at2.uheWG/igi}
       - API_RATE_LIMIT=100
       - CERT_ISSUER_NAME=Secure Data Solutions
       - LOG_LEVEL=info
